build entire docs structure, add links to footer

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,30 +4,33 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A website for testing",
-    "android": "android",
-    "api-reference-overview": "api-reference-overview",
+    "android": "kin-core-android",
+    "Android": "Android",
+    "api-reference-overview": "Overview",
+    "fee-faucet": "Fee Faucet Service",
+    "getting-started": "Getting Started",
+    "Getting Started": "Getting Started",
+    "index": "index",
+    "intro": "Introduction",
+    "ios": "kin-core-ios",
+    "IOS": "IOS",
+    "kin-faucet": "KIN Faucet Service",
+    "links": "links",
+    "network-info": "Network Information",
+    "onboarding": "Onboarding",
+    "python": "kin-core-python",
+    "Python": "Python",
+    "tools": "Tools",
+    "Guides": "Guides",
+    "Docs": "Docs",
+    "Tools": "Tools",
+    "Help": "Help",
     "doc1": "Latin-ish",
     "Example Page": "Example Page",
     "doc2": "document number 2",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
-    "doc5": "Fifth Document",
-    "fee-faucet": "fee-faucet",
-    "getting-started": "Getting Started",
-    "Getting Started": "Getting Started",
-    "intro": "Introduction",
-    "ios": "ios",
-    "kin-faucet": "KIN Faucet Service",
-    "KIN Faucet Service": "KIN Faucet Service",
-    "links": "links",
-    "onboarding": "Onboarding",
-    "python": "python",
-    "tools": "tools",
-    "Guides": "Guides",
-    "API": "API",
-    "Help": "Help",
-    "Blog": "Blog",
-    "First Category": "First Category"
+    "doc5": "Fifth Document"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
