--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -24,13 +24,7 @@
     "Guides": "Guides",
     "Docs": "Docs",
     "Tools": "Tools",
-    "Help": "Help",
-    "doc1": "Latin-ish",
-    "Example Page": "Example Page",
-    "doc2": "document number 2",
-    "doc3": "This is document number 3",
-    "doc4": "Other Document",
-    "doc5": "Fifth Document"
+    "Help": "Help"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
